--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@refinedev/react-hook-form": "^4.8.12",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
@@ -27,6 +28,7 @@
     "react-hook-form": "^7.48.2",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
+    "sass": "^1.69.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
