--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@refinedev/react-hook-form": "^4.8.12",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
-    "next": "14.0.3",
+    "next": "^14.0.5-canary.66",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
