--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
-    "@mui/x-data-grid": "^6.18.7",
+    "@mui/x-data-grid": "^6.19.1",
     "@mui/x-data-grid-generator": "^6.18.7",
     "@reduxjs/toolkit": "^2.0.1",
     "@refinedev/react-hook-form": "^4.8.12",
@@ -27,7 +27,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "react-redux": "^9.0.4",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "sass": "^1.69.7",
     "yup": "^1.3.2"
