--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.6",
     "@mui/x-data-grid": "^6.19.1",
     "@mui/x-data-grid-generator": "^6.18.7",
+    "@mui/x-date-pickers": "^6.19.2",
     "@reduxjs/toolkit": "^2.0.1",
     "@refinedev/react-hook-form": "^4.8.12",
     "axios": "^1.6.2",
